@@ -12,6 +12,7 @@ Import-Package: org.restlet,
  org.restlet.engine.adapter,
  org.restlet.engine.application,
  org.restlet.engine.component,
+ org.restlet.engine.header,
  org.restlet.engine.local,
  org.restlet.engine.security,
  org.restlet.engine.util,
